--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
@@ -149,7 +149,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">（九）</td>
-                    <td class="td_content">其它违反中华人民共和国宪法、法律、行政法规和规范性文件的信息。</td>
+                    <td class="td_content">其他违反中华人民共和国宪法、法律、行政法规和规范性文件的信息。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第十八条</td>
