--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_WLFPCS.cshtml
@@ -170,7 +170,7 @@
                 </tr>
                 <tr>
                     <td class="td_content" colspan="2">
-                        六、其它条款：<br />
+                        六、其他条款：<br />
                         1、甲、乙双方签署本协议时，应具有完全民事行为能力，对各自的权利、义务、责任清楚明白，并愿按合同规定严格执行，如一方违反本协议，另一方有权按本合 同规定索赔。<br />
                         2、本协议未尽事宜，经双方协商一致可订立补充条款，本协议及其补充条款内空格部份填写的文字与铅印文字具有同等效力。<br />
                         3、本协议和补充条款及附件共有贰页，壹式俩份，甲、乙双方各执壹份，均有同等效力，签字即生效。<br />
@@ -829,7 +829,7 @@
                         <span class="span_green">索尼</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;索尼作为数码相机的第一品牌，市场上的“水货”也很多，索尼产地分日本原产和中国上海两种，日本原产的水货可能性很大，上海制造一般不存在“水货”问题。尤其是从去年开始，索尼公司在华所有售后维修部已停止对日产以上机型的保修服务；索尼相机的保修卡上有生产厂址、相机型号、机身编号等项，均在出厂封装时便打印在保修卡上，不存在手写的情况;外包装上无论上海还是日产的，都有合格证及简体中文的生产厂址，且包装只有英文及中文，决无日文出现；没有CN5编码的产品一定是“水货”。<br />
                         <span class="span_green">尼康</span><br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;尼康于2002年在中国无锡建设了尼康无锡光学仪器公司，总的来说，尼康的行货产品除了日本原产的外，也有同样的中国制造的。尼康所有的行货产品都附带简体的中文说明书，如果产品没有提供简体中文说明书，只有繁体中文或没有说明书，那么基本上可以断定这是一台水货的DC。尼康产品的保修卡，正经行货的都标有“NIKON HONG KONG LTD”的字样，如果保修单上写的是“NIKON JAPAN”或其它文字，也可以判定它是水货了。不过要注意，所有的行货都标有“NIKON HONG KONG LTD”，但所有标有“NIKON HONG KONG LTD”的却并不一定都是行货，这点大家要分清楚。另外，如果保修单上没有量子、新康华、亮驰、丽达这四大代理任意一个保修专用章，那么这就极有可能是一台水货DC。有些代理如量子在盒子上贴有防伪标贴。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;尼康于2002年在中国无锡建设了尼康无锡光学仪器公司，总的来说，尼康的行货产品除了日本原产的外，也有同样的中国制造的。尼康所有的行货产品都附带简体的中文说明书，如果产品没有提供简体中文说明书，只有繁体中文或没有说明书，那么基本上可以断定这是一台水货的DC。尼康产品的保修卡，正经行货的都标有“NIKON HONG KONG LTD”的字样，如果保修单上写的是“NIKON JAPAN”或其他文字，也可以判定它是水货了。不过要注意，所有的行货都标有“NIKON HONG KONG LTD”，但所有标有“NIKON HONG KONG LTD”的却并不一定都是行货，这点大家要分清楚。另外，如果保修单上没有量子、新康华、亮驰、丽达这四大代理任意一个保修专用章，那么这就极有可能是一台水货DC。有些代理如量子在盒子上贴有防伪标贴。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;除了以上两种方法，还有一种最为直接、可靠的方法。就是拨打尼康的800电话，提供自己机器的机身序列号，服务人员就会告诉您这台机器是“行 货”还是“水货”。<br />
                         <span class="span_green">奥林巴斯</span><br />
                         &nbsp;&nbsp;&nbsp;&nbsp;目前市面上奥林巴斯“水货”比较多。奥林巴斯作为第一批在国内深圳设厂的大公司，外包装上都会有注明生产址“广东省深圳市南山区高新技术产业园北区”；其次说明书、保修卡和外包装方面，也都是简体中文版本的。奥林巴斯也可以通过拨打8008106046进行查询其产品是否为行货。<br />
@@ -1004,11 +1004,11 @@
             <table>
                 <tr>
                     <td class="td_content" colspan="2">
-                        &nbsp;&nbsp;&nbsp;&nbsp;1、买卖双方建立信息沟通渠道，买方了解房屋整体现状及产权状况，要求卖方提供合法的证件，包括房屋所有权证书、身份证件及其它证件。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;1、买卖双方建立信息沟通渠道，买方了解房屋整体现状及产权状况，要求卖方提供合法的证件，包括房屋所有权证书、身份证件及其他证件。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;2、如卖方提供的房屋合法，可以上市交易，买方可以交纳购房定金(交纳购房定金不是商品房买卖的必经程序)，买卖双方签订房屋买卖合同(或称房屋买卖契约)。买卖双方通过协商，对房屋坐落位置、产权状况及成交价格、房屋交付时间、房屋交付、产权办理等达成一致意见后，双方签订至少一式三份的房屋买卖合同。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;3、买卖双方共同向房地产交易管理部门提出申请，接受审查。买卖双方向房地产管理部门提出申请手续后，管理部门要查验有关证件，审查产权，对符合上市条件的房屋准予办理过户手续，对无产权或部分产权又未得到其他产权共有人书面同意的情况拒绝申请，禁止上市交易。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;4、立契。房地产交易管理部门根据交易房屋的产权状况和购买对象，按交易部门事先设定的审批权限逐级申报审核批准后，交易双方才能办理立契手续。现在北京市已取消了交易过程中的房地产卖契，即大家所俗称的“白契”。<br />
-                        &nbsp;&nbsp;&nbsp;&nbsp;5、缴纳税费。税费的构成比较复杂，要根据交易房屋的性质而定。比如房改房、危改回迁房、经济适用房与其它商品房的税费构成是不一样的。<br />
+                        &nbsp;&nbsp;&nbsp;&nbsp;5、缴纳税费。税费的构成比较复杂，要根据交易房屋的性质而定。比如房改房、危改回迁房、经济适用房与其他商品房的税费构成是不一样的。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;6、办理产权转移过户手续。交易双方在房地产交易管理部门办理完产权变更登记后，交易材料移送到发证部门，买方凭领取房屋所有权证通知单到发证部门申领新的产权证。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;7、对贷款的买受人来说在与卖方签订完房屋买卖合同后由买卖双方共同到贷款银行办理贷款手续，银行审核买方的资信，对双方欲交易的房屋进行评估，以确定买方的贷款额度，然后批准买方的贷款，待双方完成产权登记变更，买方领取房屋所有权证后，银行将贷款一次性发放。<br />
                         &nbsp;&nbsp;&nbsp;&nbsp;8、买方领取房屋所有权证、付清所有房款，卖方交付房屋并结清所有物业费后双方的二手房屋买卖合同全部履行完毕。<br />
