--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_KSDH_XSSYZN.cshtml
@@ -179,7 +179,7 @@
                         (6) 宣扬封建迷信、传播有性挑逗性质的材料、涉及发布疑似色情、赌博、暴力或凶杀的信息；<br />
                         (7) 宣扬恐怖主义或唆使他人犯罪；公开侮辱他人或歪曲事实诽谤他人的； <br />
                         (8) 损害国家机关声誉的； <br />
-                        (9) 其它违反中华人民共和国宪法、法律和行政法规的内容。 <br />
+                        (9) 其他违反中华人民共和国宪法、法律和行政法规的内容。 <br />
                         2、严格禁止物品 <br />
                         (1) 毒品 <br />
                         (2) 任何形式的发票，不具有效性和流通性的为收藏目的转让的情况除外；<br />
@@ -195,7 +195,7 @@
                         (12) 管制刀具，如匕首、三棱刀（包括机械加工用的三棱刮刀）、带有自锁装置的弹簧刀（跳刀）以及其他类似的单刃、双刃、三棱尖刀；<br />
                         (13) 警用和军用物品、设备，如监视、监听类设备、警服、警徽、手铐、警灯、警笛、警用器械等； <br />
                         (14) 其他武器，如弓弩,钢珠,铅珠等； <br />
-                        (15) 其它可能危害他人安全或利益或用于违法目的的物品，如撬锁设备、强效催情用品、药品、解密软件、导弹发射程式、个人<br />
+                        (15) 其他可能危害他人安全或利益或用于违法目的的物品，如撬锁设备、强效催情用品、药品、解密软件、导弹发射程式、个人<br />
                         企业私密资料，汽车反雷达测速仪，电子狗，报警器，手机监听器，汽车隐性喷雾，地磅解码器，节电器，电表反转器等；<br />
                         (16) 需执照或政府许可才能使用的设备，如广播发射台，碟型人造卫星天线；<br />
                         (17) 赌具，如吃角子老虎机，透视麻将，透视扑克等； <br />
@@ -209,7 +209,7 @@
                         (24) 无注册号的磁带或光盘，共享软件；Beta级或未公布的软件；未同设备捆绑出售的OEM软件；<br />
                         (25) 国家法律规定适用许可证管理规定而不能提供相关许可证的产品； <br />
                         (26) 根据法律、法规禁止销售或本网站认为依据公共风俗不应贩售的物品,如二手、原味内衣裤、袜。 <br />
-                        3、其它限制发布的物品： <br />
+                        3、其他限制发布的物品： <br />
                         (1) 文物：信息小镇网用户仅可按《中华人民共和国文物保护法》第50条、第51条的规定进行民间收藏文物的买卖；<br />
                         (2) 动物：信息小镇网用户仅允许销售常见的家禽、家畜、宠物或可食用动物。根据国家有关规定，野生动物、国家保护类动物、濒<br />
                         危动物活体、内脏、任何肢体、皮毛、标本或其他制成品均不能登陆。其中象牙和玳瑁类制品，属于严格禁止登陆的产品。<br />
