--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -155,7 +155,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;2 、除本协议规定之工作所需外，未经对方事先书面同意，任何一方不得擅自使用、复制对方的商标、标志、商业信息、技术及其他资料。任何一方从对方获得的知识产权授权许可不得用于超出本协议约定的目的和范围以为的其他用途。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;3 、甲乙双方各自对其软件及技术享有专有权利，未经权利人的明确授权，任何一方不得更改、演绎、拆分、反解对方的技术和程序或以其他任何方式进行可能损害对方专有权利的行为。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;4 、甲方应对签署及履行本协议过程中所知悉的乙方及乙方用户的各类信息及资料（包括但不限于甲方通过线上收集到的乙方平台用户信息等）严格保密，积极维护乙方及乙方用户的合法权益，未经乙方及乙方用户书面同意，甲方不得向任何第三方透露，更不得将该等信息及资料用于任何商业用途。<br/>
-            &nbsp;&nbsp;&nbsp;&nbsp;5 、未经另一方的事先书面同意，一方不得向任何第三方披露或泄漏其基于本协议直接或间接从另一方获得的关于另一方的商业机密，但依据双方约定、有关法律、法规、政府部门、证券交易所或其它监管机构要求和甲乙双方为履行工作和职责而需要知道该种保密信息的雇员、管理人员、董事、代理商和或顾问除外。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;5 、未经另一方的事先书面同意，一方不得向任何第三方披露或泄漏其基于本协议直接或间接从另一方获得的关于另一方的商业机密，但依据双方约定、有关法律、法规、政府部门、证券交易所或其他监管机构要求和甲乙双方为履行工作和职责而需要知道该种保密信息的雇员、管理人员、董事、代理商和或顾问除外。 <br/>
             &nbsp;&nbsp;&nbsp;&nbsp;6 、本条款有效期为协议履行完毕或解除/终止后3年内。 <br/>
             九、免责声明<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;1、甲方了解并同意：<br />
@@ -180,7 +180,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;因战争、暴动、自然灾害、政府行政行为、电力中断、互联网不法攻击、第三方互联网通讯供应商原因、乙方操作平台及软件原因、网站服务器、数据库系统维护及系统升级而导致乙方服务器不能正常接入或临时性障碍无法履行或延迟履行本协议约定之义务时，不视为乙方违约。 <br />
             十二、法律适用和争议解决 <br />
             &nbsp;&nbsp;&nbsp;&nbsp;1、本协议之订立、生效、解释、修订、补充、终止、执行和争议解决均适用中华人民共和国法律。如法律无相关规定的，则应参照通用国际商业惯例和（或）行业惯例。<br />
-            &nbsp;&nbsp;&nbsp;&nbsp;2、如本协议条款与国家法律相抵触时，则这些条款将完全按法律规定重新解释，其它条款则依旧保持对双方产生法律效力和影响。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;2、如本协议条款与国家法律相抵触时，则这些条款将完全按法律规定重新解释，其他条款则依旧保持对双方产生法律效力和影响。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;3、因本协议产生之争议、纠纷，应由信息小镇与您友好协商；协商不成的，应依照中华人民共和国法律予以处理，并以福建省福州市鼓楼区人民法院为第一审管辖法院；按照中华人民共和国法律，因级别管辖的规定，福建省福州市鼓楼区人民法院无权管辖的，以其上级法院作为第一审管辖法院。 <br />
         </div>
     </div>
