--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_WZJY.cshtml
@@ -23,7 +23,7 @@
                         <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbsc">信息分类建议</span>
                         <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">区域划分建议</span>
                         <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">创意点子</span>
-                        <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">其它点子</span>
+                        <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_xxbfhxg">其他点子</span>
                     </td>
                 </tr>
                 <tr class="tr_wtjj">
