--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/RZGL/RZGL.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/RZGL/RZGL.cshtml
@@ -28,7 +28,7 @@
             <em class="emstep" id="emQYLRZ"></em>
         </div>
         <div class="divstep" id="divQTRZ">
-            <span class="spanstep" id="spanQTRZ">其它认证</span>
+            <span class="spanstep" id="spanQTRZ">其他认证</span>
             <em class="emstep" id="emQTRZ"></em>
         </div>
         <div class="divstep">
@@ -182,7 +182,7 @@
                 <div class="div_content_info_left">
                     <span class="img_content_info" id="img_content_info_qtrz"></span>
                     <div class="div_content_info_left_info">
-                        <span class="span_content_info_left">其它认证</span>
+                        <span class="span_content_info_left">其他认证</span>
                         <ul class="ul_content_info">
                             <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;包含各类企业许可证</li>
                             <li class="li_content_info">&nbsp;&nbsp;•&nbsp;&nbsp;认证时间较长</li>
