--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_LXKF.cshtml
@@ -35,7 +35,7 @@
                         <td class="td_wtlx_inner_right">
                             <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_tsjbxjxx">投诉举报虚假信息</span>
                             <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_mysjhm">冒用手机号码</span>
-                            <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_qtxxmy">其它信息冒用</span>
+                            <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_qtxxmy">其他信息冒用</span>
                             <span class="span_wtlx_inner_right" id="span_wtlx_inner_right_ssbts">申诉被投诉</span>
                         </td>
                     </tr>
@@ -338,7 +338,7 @@
                     <div style="display:block;height:112px;">
                         <span class="span_wtjj_inner" id="span_wtjj_inner_tszhmmcw">1、提示账户密码错误</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_sjbmyhbbrrz">2、手机被冒用或被别人认证</span>
-                        <span class="span_wtjj_inner" id="span_wtjj_inner_qtbdqk">3、其它被盗情况</span>
+                        <span class="span_wtjj_inner" id="span_wtjj_inner_qtbdqk">3、其他被盗情况</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_zhbdxzx">4、账户被盗想注销</span>
                         <span class="span_wtjj_inner" id="span_wtjj_inner_rhfzzhbd">5、如何防止账户被盗</span>
                     </div>
