--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_JDJJBG_ESJD/ES_JDJJBG_ESJD.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_JDJJBG_ESJD/ES_JDJJBG_ESJD.cshtml
@@ -92,7 +92,7 @@
                     <img class="iFWCZ" id="imgSJHS" /><label class="labelFWCZ">&nbsp;&nbsp;商家回收&nbsp;&nbsp;</label>
                 </div>
             </div>
-            <div id="divPBLB" class="divFWCZ" style="z-index: 999">
+            <div id="divJDLB" class="divFWCZ" style="z-index: 999">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -116,7 +116,111 @@
                     </div>
                 </div>
             </div>
-            <div id="divXJCD" class="divFWCZ" style="z-index: 996">
+            <div id="divDSXXCS" class="divFWCZ" style="z-index: 998; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divDSPMCCText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDSPMCC" class="spanFWQK spanFontColor" style="margin-top: 0">屏幕尺寸</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divDSPMCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divDSPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDSPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divDSPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divXYJXXCS" class="divFWCZ" style="z-index: 997; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divXYJPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXYJPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXYJPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divKTXXCS" class="divFWCZ" style="z-index: 996; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divKTPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKTPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKTPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divKTBPDSText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKTBPDS" class="spanFWQK spanFontColor" style="margin-top: 0">变频/定速</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKTBPDS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divKTGLText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKTGL" class="spanFWQK spanFontColor" style="margin-top: 0">功率</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKTGL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divBXXXCS" class="divFWCZ" style="z-index: 995; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divBXPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanBXPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divBXPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divBGXXCS" class="divFWCZ" style="z-index: 994; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divBGPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanBGPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divBGPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divXJCD" class="divFWCZ" style="z-index: 993;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">新旧</span>
@@ -132,7 +236,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divJG" class="divFWCZ" style="z-index: 995">
+            <div id="divJG" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">转让价格</span>
@@ -143,9 +247,9 @@
                         <span class="spanFontColor">元</span>
                     </span>
                 </div>
-                <div id="divJGTip" class="Warn" style="z-index: 995; position: relative;"></div>
+                <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divJYDD" class="divFWCZ" style="z-index: 994;">
+            <div id="divJYDD" class="divFWCZ" style="z-index: 991;">
                 <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">交易地点</span>
