--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_MYFZMR_FZXMXB/ES_MYFZMR_FZXMXB.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_MYFZMR_FZXMXB/ES_MYFZMR_FZXMXB.cshtml
@@ -116,6 +116,38 @@
                     </div>
                 </div>
             </div>
+            <div id="divFZXXCS" class="divFWCZ" style="z-index: 998; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divFZCCText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanFZCC" class="spanFWQK spanFontColor" style="margin-top: 0">尺寸</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divFZCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divXXXCS" class="divFWCZ" style="z-index: 997; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divXCCText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXCC" class="spanFWQK spanFontColor" style="margin-top: 0">尺寸</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div id="divXJCD" class="divFWCZ" style="z-index: 993;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
