--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/FBCG/FBCG.cshtml
@@ -49,7 +49,7 @@
                         该信息已发布在 <a class="fbcg_info_navigation">福州 - 房产信息 - 租房</a>您的信息需要审核才能展示，请在个人中心关注信息状态。
                     </div>
                     <div class="fbcg_main">
-                        <a class="btn btn-info fbcg_btn" id="btnCKXX"><span>查看信息</span></a>
+                        <a class="btn btn-info fbcg_btn" id="btnCKXX"><span>预览信息</span></a>
                         <a class="btn btn-info fbcg_btn" id="btnGLXX"><span>管理信息</span></a>
                         <a class="btn btn-info fbcg_btn" id="btnZDXX"><span>置顶信息</span></a>
                         <a class="btn btn-info fbcg_btn" id="btnZFXX"><span>再发一条</span></a>
