--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_WHYL_WYXNWP/ES_WHYL_WYXNWP.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_WHYL_WYXNWP/ES_WHYL_WYXNWP.cshtml
@@ -92,7 +92,7 @@
                     <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让&nbsp;&nbsp;</label>
                 </div>
             </div>
-            <div id="divJDLB" class="divFWCZ" style="z-index: 999">
+            <div id="divWYLB" class="divFWCZ" style="z-index: 999">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">类别</span>
@@ -111,7 +111,7 @@
                             <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divXL" class="div_xzk">
+                        <div id="divXL" class="div_xzk" style="display: none;">
                             <div class="div_xzk_head">
                                 <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
                                 <input class="btn btn-info" type="button" value="快速搜索" />
@@ -158,7 +158,7 @@
                     </div>
                 </div>
             </div>
-            <div id="divJG" class="divFWCZ" style="z-index: 992;">
+            <div id="divJG" class="divFWCZ" style="z-index: 996;">
                 <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">转让价格</span>
@@ -171,7 +171,7 @@
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
-            <div id="divJYDD" class="divFWCZ" style="z-index: 991;">
+            <div id="divJYDD" class="divFWCZ" style="z-index: 995;">
                 <div class="divLeft" style="margin-left: 102px;">
                     <span class="required">*</span>
                     <span class="spanFWCZ">交易地点</span>
@@ -199,7 +199,7 @@
                 <span class="spanSplit">详细信息</span>
                 <em class="emSplit"></em>
             </div>
-            <div id="divFYBT" class="divFWCZ" style="margin-top: 22px;">
+            <div id="divFYBT" class="divFWCZ" style="margin-top: 22px; position: relative; z-index: 994;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
                     <span id="spanFYBT">标题</span>
