--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ES/ES_WHYL_WYXNWP.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/ES/ES_WHYL_WYXNWP.css
@@ -506,7 +506,7 @@
 }
 
 .input_content {
-    width: 386px;
+    width: 451px;
     cursor: default;
     border: 1px solid #ccc;
     border-radius: 4px;
@@ -522,8 +522,8 @@
 .div_xzk {
     margin-top: -7px;
     margin-left: -1px;
-    width: 555px;
-    height: 300px;
+    width: 620px;
+    height: 344px;
     border: 1px solid #ccc;
     background-color: #fff;
 }
@@ -531,7 +531,8 @@
 .div_xzk_head {
     width: 100%;
     height: 40px;
-    margin: 20px 20px;
+    margin-top: 20px;
+    margin-left: 20px;
     display: block;
 }
 
@@ -541,7 +542,7 @@
     }
 
 .div_xzk_body {
-    height: 240px;
+    height: 260px;
     width: 100%;
 }
 
@@ -560,16 +561,16 @@
 }
 
 .div_content_yxmc {
-    width: 410px;
-    height: 228px;
+    width: 480px;
+    height: 260px;
     display: inline-block;
     float: left;
-    padding: 20px 20px;
+    padding: 0px 20px;
 }
 
 .div_content_yxbq {
     width: 136px;
-    height: 228px;
+    height: 260px;
     display: inline-block;
     float: right;
 }
@@ -593,7 +594,7 @@
 .span_yxmc {
     display: block;
     float: left;
-    height: 30px;
+    height: 35px;
     line-height: 30px;
     width: 110px;
     color: #333;
