--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_GCQX/ES_QTES_GCQX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_GCQX/ES_QTES_GCQX.cshtml
@@ -119,7 +119,7 @@
                             <span id="spanPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divPP" class="div_xzk" style="display: none">
+                        <div id="divPP" class="div_xzk" style="display: none;">
                             <div class="div_xzk_head">
                                 <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
                                 <input class="btn btn-info" type="button" value="快速搜索" />
@@ -132,7 +132,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div id="divXHText" class="spanFWLXOut SRK" style="width: 200px;">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
                             <span id="spanXH" class="spanFWQK spanFontColor" style="margin-top: 0; width: 175px;">请选择型号</span>
@@ -143,21 +142,18 @@
                     </div>
                 </div>
             </div>
-            <div id="divXJCD" class="divFWCZ" style="z-index: 993;">
+            <div id="divDW" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">新旧</span>
+                    <span class="spanFWCZ">吨位</span>
                 </div>
                 <div class="divRight">
-                    <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divXJ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
+                    <span id="spanDW" class="spanFWLX SRK" style="display: inline-block;">
+                        <input class="inputLCFB spanFontColor" id="DW" maxlength="9" column="JG" type="text" style="width: 100px" />
+                        <span class="spanFontColor">吨</span>
+                    </span>
                 </div>
+                <div id="divDWTip" class="Warn" style="z-index: 992; position: relative;"></div>
             </div>
             <div id="divJG" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 102px;">
@@ -171,30 +167,6 @@
                     </span>
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
-            </div>
-            <div id="divJYDD" class="divFWCZ" style="z-index: 991;">
-                <div class="divLeft" style="margin-left: 102px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">交易地点</span>
-                </div>
-                <div class="divRight">
-                    <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
-                        </div>
-                    </div>
-                </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
                 <span class="spanSplit">详细信息</span>
