--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_GCQX/ES_QTES_GCQX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/ES_QTES_GCQX/ES_QTES_GCQX.cshtml
@@ -162,8 +162,8 @@
                 </div>
                 <div class="divRight">
                     <span id="spanJG" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
-                        <span class="spanFontColor">元</span>
+                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 80px" />
+                        <span class="spanFontColor">万元</span>
                     </span>
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
