--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/CL_ZXCDDCSLC/CL_ZXCDDCSLC.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "ES_QTES_GCQX";
+    ViewBag.Title = "CL_ZXCDDCSLC";
     Layout = "~/Areas/Business/Views/Shared/_ListLayout.cshtml";
 }
 
@@ -9,12 +9,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title></title>
-    <link href="@Url.Content("~/Areas/Business/Css/ES/ES_QTES_GCQX.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/Areas/Business/Css/CL/CL_ZXCDDCSLC.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/Top.css" )" rel="stylesheet" />
     <link href="@Url.Content("~/Areas/Business/Css/Common/XZQ.css" )" rel="stylesheet" />
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Common/XZQ.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/ES/ES_QTES_GCQX.js")"></script>
-    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/ES/ES_QTES_GCQXYZ.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CL/CL_ZXCDDCSLC.js")"></script>
+    <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/CL/CL_ZXCDDCSLCYZ.js")"></script>
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/Public_TP.js")"></script>
 </head>
 <body>
@@ -85,11 +85,11 @@
             <div id="divGQ" class="divFWCZ">
                 <div class="divLeft" style="margin-left: 128px;">
                     <span class="required">*</span>
-                    <span class="spanFWCZ">身份</span>
+                    <span class="spanFWCZ">供求</span>
                 </div>
                 <div class="divRight">
-                    <img class="iFWCZ" id="imgGRZR" /><label class="labelFWCZ">&nbsp;&nbsp;个人转让</label>
-                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让&nbsp;&nbsp;</label>
+                    <img class="iFWCZ" id="imgSJZR" /><label class="labelFWCZ">&nbsp;&nbsp;商家转让</label>
+                    <img class="iFWCZ" id="imgSJHS" /><label class="labelFWCZ">&nbsp;&nbsp;商家回收&nbsp;&nbsp;</label>
                 </div>
             </div>
             <div id="divJDLB" class="divFWCZ" style="z-index: 999">
@@ -106,54 +106,135 @@
                         <div id="divLB" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
-                </div>
-            </div>
-            <div id="divGCQXPP" class="divFWCZ" style="z-index: 998;">
-                <div class="divLeft" style="margin-left: 128px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">品牌</span>
-                </div>
-                <div class="divRight">
-                    <div id="divPPText" class="spanFWLXOut SRK" style="position: relative;">
+                    <div id="divXLText" class="spanFWLXOut SRK">
                         <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
-                            <span id="spanPP" class="spanFWQK spanFontColor" style="margin-top: 0">请选择品牌</span>
+                            <span id="spanXL" class="spanFWQK spanFontColor" style="margin-top: 0px;">请选择小类</span>
                             <div class="divFWQKArrow"></div>
                         </div>
-                        <div id="divPP" class="div_xzk" style="display: none;">
-                            <div class="div_xzk_head">
-                                <input class="input_content" type="text" placeholder="输入名称快速搜索" style="cursor: text" />
-                                <input class="btn btn-info" type="button" value="快速搜索" />
-                            </div>
-                            <div class="div_xzk_body">
-                                <div class="div_content_yxmc" id="div_content_yxmc">
-                                </div>
-                                <div class="div_content_yxbq" id="div_content_yxbq">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div id="divXHText" class="spanFWLXOut SRK" style="width: 200px;">
-                        <div class="spanFWLXIn" style="border: none; margin-top: 6px; width: 200px;">
-                            <span id="spanXH" class="spanFWQK spanFontColor" style="margin-top: 0; width: 175px;">请选择型号</span>
-                            <div class="divFWQKArrow"></div>
-                        </div>
-                        <div id="divXH" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        <div id="divXL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
                         </div>
                     </div>
                 </div>
             </div>
-            <div id="divDW" class="divFWCZ" style="z-index: 992;">
-                <div class="divLeft" style="margin-left: 128px;">
-                    <span class="required">*</span>
-                    <span class="spanFWCZ">吨位</span>
+            <div id="divDSXXCS" class="divFWCZ" style="z-index: 998; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
                 </div>
                 <div class="divRight">
-                    <span id="spanDW" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="DW" maxlength="9" column="DW" type="text" style="width: 100px" />
-                        <span class="spanFontColor">吨</span>
-                    </span>
+                    <div id="divDSPMCCText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDSPMCC" class="spanFWQK spanFontColor" style="margin-top: 0">屏幕尺寸</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divDSPMCC" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divDSPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanDSPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divDSPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
                 </div>
-                <div id="divDWTip" class="Warn" style="z-index: 992; position: relative;"></div>
+            </div>
+            <div id="divXYJXXCS" class="divFWCZ" style="z-index: 997; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divXYJPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXYJPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXYJPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divKTXXCS" class="divFWCZ" style="z-index: 996; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divKTPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKTPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKTPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divKTBPDSText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKTBPDS" class="spanFWQK spanFontColor" style="margin-top: 0">变频/定速</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKTBPDS" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divKTGLText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanKTGL" class="spanFWQK spanFontColor" style="margin-top: 0">功率</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divKTGL" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divBXXXCS" class="divFWCZ" style="z-index: 995; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divBXPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanBXPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divBXPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divBGXXCS" class="divFWCZ" style="z-index: 994; display: none;">
+                <div class="divLeft" style="margin-left: 160px;">
+                    <span class="required">&nbsp;</span>
+                    <span class="spanFWCZ"></span>
+                </div>
+                <div class="divRight">
+                    <div id="divBGPPText" class="spanFWLXOut SRK" style="position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanBGPP" class="spanFWQK spanFontColor" style="margin-top: 0">品牌</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divBGPP" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="divXJCD" class="divFWCZ" style="z-index: 993;">
+                <div class="divLeft" style="margin-left: 128px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">新旧</span>
+                </div>
+                <div class="divRight">
+                    <div id="divXJText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanXJ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择新旧</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divXJ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="divJG" class="divFWCZ" style="z-index: 992;">
                 <div class="divLeft" style="margin-left: 102px;">
@@ -162,11 +243,35 @@
                 </div>
                 <div class="divRight">
                     <span id="spanJG" class="spanFWLX SRK" style="display: inline-block;">
-                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 80px" />
-                        <span class="spanFontColor">万元</span>
+                        <input class="inputLCFB spanFontColor" id="JG" maxlength="9" column="JG" type="text" style="width: 100px" />
+                        <span class="spanFontColor">元</span>
                     </span>
                 </div>
                 <div id="divJGTip" class="Warn" style="z-index: 992; position: relative;"></div>
+            </div>
+            <div id="divJYDD" class="divFWCZ" style="z-index: 991;">
+                <div class="divLeft" style="margin-left: 102px;">
+                    <span class="required">*</span>
+                    <span class="spanFWCZ">交易地点</span>
+                </div>
+                <div class="divRight">
+                    <div id="divQYText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanQY" class="spanFWQK spanFontColor" style="margin-top: 0">请选择区域</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divQY" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                    <div id="divSQText" class="spanFWLXOut SRK" style="border: 1px solid #cccccc; border-radius: 4px; z-index: 997; position: relative;">
+                        <div class="spanFWLXIn" style="border: none; margin-top: 6px;">
+                            <span id="spanSQ" class="spanFWQK spanFontColor" style="margin-top: 0">请选择地段</span>
+                            <div class="divFWQKArrow"></div>
+                        </div>
+                        <div id="divSQ" class="divdropdown" style="margin-top: -7px; margin-left: -1px;">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="divXXXX" class="divSplit" style="display: block; text-align: left;">
                 <span class="spanSplit">详细信息</span>
